Added list activity; some more stories to read

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="hello">Hello World, SmartUpActivity!</string>
     <string name="app_name">SmartUp</string>
+    <string name="pick_text">What are we reading?</string>
 
 </resources>
